--- a/back/api/.env
+++ b/back/api/.env
@@ -20,7 +20,7 @@ TRUSTED_HOSTS=^(localhost|php)$
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=!ChangeMe!
+APP_SECRET=ChangeMe
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,9 +28,10 @@ APP_SECRET=!ChangeMe!
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@database:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="mysql://app:ChangeMe@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:ChangeMe@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+#DATABASE_URL="postgresql://app:ChangeMe@database:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://Ossama9:EWxYt01pLcuG@ep-dry-shape-a2t1a5db.eu-central-1.aws.neon.tech/database?sslmode=require"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
