--- a/back/api/frankenphp/Caddyfile
+++ b/back/api/frankenphp/Caddyfile
@@ -22,27 +22,15 @@ log {
 	}
 }
 
-# Matches requests for HTML documents, for static files and for Next.js files,
-# except for known API paths and paths with extensions handled by API Platform
-@pwa expression `(
-        header({'Accept': '*text/html*'})
-        && !path(
-            '/docs*', '/media*', '/graphql*', '/bundles*', '/contexts*', '/_profiler*', '/_wdt*',
-            '*.json*', '*.html', '*.csv', '*.yml', '*.yaml', '*.xml'
-        )
-    )
-    || path('/favicon.ico', '/manifest.json', '/robots.txt', '/_next*', '/sitemap*')`
-
-
 route {
 	root * /app/public
 	mercure {
 		# Transport to use (default to Bolt)
 		transport_url {$MERCURE_TRANSPORT_URL:bolt:///data/mercure.db}
 		# Publisher JWT key
-		publisher_jwt {env.MERCURE_PUBLISHER_JWT_KEY} {env.MERCURE_PUBLISHER_JWT_ALG}
+		publisher_jwt ChangeThisMercureHubJWTSecretKey {env.MERCURE_PUBLISHER_JWT_ALG}
 		# Subscriber JWT key
-		subscriber_jwt {env.MERCURE_SUBSCRIBER_JWT_KEY} {env.MERCURE_SUBSCRIBER_JWT_ALG}
+		subscriber_jwt ChangeThisMercureHubJWTSecretKey {env.MERCURE_SUBSCRIBER_JWT_ALG}
 		# Allow anonymous subscribers (double-check that it's what you want)
 		anonymous
 		# Enable the subscription API (double-check that it's what you want)
@@ -59,7 +47,6 @@ route {
 
 	# Comment the following line if you don't want Next.js to catch requests for HTML documents.
 	# In this case, they will be handled by the PHP app.
-	reverse_proxy @pwa http://{$PWA_UPSTREAM}
 
 	# Add trailing slash for directory requests
 	@canonicalPath {
