--- a/.github/workflows/cd-back.yaml
+++ b/.github/workflows/cd-back.yaml
@@ -19,7 +19,7 @@ jobs:
       - id: 'compute-ssh'
         uses: 'google-github-actions/ssh-compute@v1'
         with:
-          instance_name: 'instance-4'
+          instance_name: 'instance-back'
           zone: 'europe-west1-b'
           ssh_private_key: '${{ secrets.GCP_SSH_PRIVATE_KEY }}'
           command: 'docker run Hello world'
