--- a/.github/workflows/cd-back.yaml
+++ b/.github/workflows/cd-back.yaml
@@ -15,7 +15,9 @@ jobs:
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.gcp_credentials }}'
-
+      - name: Décode la clé SSH privée
+        run: echo "${{ secrets.GCP_SSH_PRIVATE_KEY }}" | base64 --decode > $HOME/gcp_ssh_private_key
+        shell: bash
       - id: 'compute-ssh'
         uses: 'google-github-actions/ssh-compute@v1'
         with:
