--- a/back/api/config/packages/api_platform.yaml
+++ b/back/api/config/packages/api_platform.yaml
@@ -4,7 +4,7 @@ api_platform:
             JWT:
                 name: Authorization
                 type: header
-    title: Hello API Platform
+    title: Hello Coursia
     version: 1.0.0
     # Mercure integration, remove if unwanted
     mercure: ~
