add /media nginx conf

--- a/test/.docker/nginx/conf.d/app.conf
+++ b/test/.docker/nginx/conf.d/app.conf
@@ -9,6 +9,12 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
+    location /media {
+        alias /srv/app/public/media; # Assure-toi que ce chemin est correct
+        try_files $uri $uri/ =404;
+        access_log off;
+    }
+
     # Redirige toutes les requêtes PHP vers PHP-FPM
     location ~ ^/index\.php(/|$) {
         fastcgi_pass php:9000; # Assure-toi que ceci correspond au nom du service PHP-FPM dans ton docker-compose.yml
