--- a/test/.docker/nginx/conf.d/app.conf
+++ b/test/.docker/nginx/conf.d/app.conf
@@ -1,6 +1,19 @@
+# Redirection de HTTP vers HTTPS
 server {
     listen 80;
     server_name _; # Ajuste cela selon ton domaine
+    return 301 https://$host$request_uri;
+}
+
+# Configuration pour HTTPS
+server {
+    listen 443 ssl;
+    server_name _; # Ajuste cela selon ton domaine
+
+    # Emplacement de ton certificat SSL et de ta clé privée
+    ssl_certificate /etc/nginx/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+
 
     root /srv/app/public;
 
