--- a/test/.docker/nginx/default.conf
+++ b/test/.docker/nginx/default.conf
@@ -1,12 +1,30 @@
+# Redirection de HTTP vers HTTPS
 server {
     listen 80;
     server_name _; # Ajuste cela selon ton domaine
+    return 301 https://$host$request_uri;
+}
+
+# Configuration pour HTTPS
+server {
+    listen 443 ssl;
+    server_name _; # Ajuste cela selon ton domaine
+
+    # Emplacement de ton certificat SSL et de ta clé privée
+    ssl_certificate /etc/nginx/ssl/localhost+2.pem;
+    ssl_certificate_key /etc/nginx/ssl/localhost+2-key.pem;
 
     root /srv/app/public;
 
     location / {
         # essaie de servir le fichier directement, sinon redirige vers l'index.php
         try_files $uri /index.php$is_args$args;
+    }
+
+    location /media {
+        alias /srv/app/public/media; # Assure-toi que ce chemin est correct
+        try_files $uri $uri/ =404;
+        access_log off;
     }
 
     # Redirige toutes les requêtes PHP vers PHP-FPM
