--- a/.github/workflows/ci-back.yaml
+++ b/.github/workflows/ci-back.yaml
@@ -44,8 +44,7 @@ jobs:
       - name: Start services
         run: docker compose up --wait --no-build
         env:
-          BREVO_API_KEY: ${{secrets.BREVO_API_KEY}}*
-          API_URL: https://localhost
+          BREVO_API_KEY: ${{secrets.BREVO_API_KEY}}
 
       - name: Check HTTP reachability
         run: curl -v -o /dev/null http://localhost
