--- a/test/.env
+++ b/test/.env
@@ -6,7 +6,8 @@ MAILER_DSN=smtp://mailhog:1025
 #DATABASE_URL="postgresql://root:root@database:5432/symfony?serverVersion=15&charset=utf8"
 DATABASE_VERSION=15
 
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1|(\w+\.)?goldenbookingcode\.info)(:[0-9]+)?$'
+#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1|(\w+\.)?goldenbookingcode\.info)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='*'
 
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
