--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -82,7 +82,7 @@ jobs:
 
   deploy-frontend:
     runs-on: ubuntu-latest
-    needs: [ci-back, ci-front, deploy-backend]
+#    needs: [ci-back, ci-front, deploy-backend]
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
