--- a/test/config/packages/api_platform.yaml
+++ b/test/config/packages/api_platform.yaml
@@ -8,3 +8,5 @@ api_platform:
             vary: ['Content-Type', 'Authorization', 'Origin']
         extra_properties:
             standard_put: true
+    patch_formats:
+        json: [ 'application/json' ]
