--- a/test/.docker/nginx/conf.d/app.conf
+++ b/test/.docker/nginx/conf.d/app.conf
@@ -22,21 +22,19 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    location /media {
-        alias /srv/app/public/media; # Assure-toi que ce chemin est correct
-        try_files $uri $uri/ =404;
-        access_log off;
-    }
-
     # Redirige toutes les requêtes PHP vers PHP-FPM
-    location ~ ^/index\.php(/|$) {
-        fastcgi_pass php:9000; # Assure-toi que ceci correspond au nom du service PHP-FPM dans ton docker-compose.yml
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-        internal;
-    }
+      location ~ ^/index.php(/|$) {
+          fastcgi_pass php:9000;
+
+          fastcgi_buffer_size 32k;
+          fastcgi_buffers 8 16k;
+
+          fastcgi_split_path_info ^(.+.php)(/.*)$;
+          include fastcgi_params;
+          fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+          fastcgi_param DOCUMENT_ROOT $realpath_root;
+          internal;
+      }
 
     # Refuser l'accès aux autres fichiers .php
     location ~ \.php$ {
