--- a/test/config/routes/translations.yaml
+++ b/test/config/routes/translations.yaml
@@ -2,3 +2,7 @@ get_translations:
     path: '/translations/{language}'
     controller: App\Controller\TranslationController::getTranslations
     methods: ['GET']
+get_medias:
+    path: '/media/{filename}'
+    controller: App\Controller\MediaController::serveMedia
+    methods: ['GET']
