--- a/.github/workflows/ci-back.yaml
+++ b/.github/workflows/ci-back.yaml
@@ -34,7 +34,7 @@ jobs:
           pull: true
           load: true
           files: |
-            docker-compose.yml
+            docker-compose.yaml
           set: |
             *.cache-from=type=gha,scope=${{github.ref}}
             *.cache-from=type=gha,scope=refs/heads/main
