--- a/back/.docker/nginx/default.conf
+++ b/back/.docker/nginx/default.conf
@@ -29,7 +29,7 @@ server {
 
     # Redirige toutes les requêtes PHP vers PHP-FPM
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass php:9000; # Assure-toi que ceci correspond au nom du service PHP-FPM dans ton docker-compose.yml
+        fastcgi_pass php:9000; # Assure-toi que ceci correspond au nom du service PHP-FPM dans ton docker-compose.yaml
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
